--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 
-<header>
-    <div class="container">
-        <h1>¡Bienvenido a nuestra página!</h1>
-        <p>Sitio web de muestra para una empresa ficticia</p>
-        <a href="#features" class="btn">Ver características</a>
+<header> <!-- Encabezado-->
+    <div class="container"> <!-- Clase Container para asignarle un formato de forma. Esta clase se presenta en varias secciones de la pagina-->
+        <h1>¡Bienvenido a nuestra página!</h1> <!-- Titulo de la página-->
+        <p>Sitio web de muestra para una empresa ficticia</p> <!-- Descripcion-->
+        <a href="#features" class="btn">Ver características</a> <!-- Boton directo a la seccion caracteristicas-->
     </div>
 </header>
 
-<section id="features">
+<section id="features"> <!-- Seccion de caracteristicas-->
     <div class="container">
         <h2>Características principales</h2>
-        <div class="feature">
+        <div class="feature"> <!-- Esta clase recibe el estilo de centrado y margen-->
             <h3>Facilidad de uso</h3>
             <p>Nuestra plataforma es fácil de usar para cualquier persona, sin importar su experiencia.</p>
         </div>
@@ -34,10 +34,10 @@
     </div>
 </section>
 
-<section id="testimonials">
+<section id="testimonials"> <!-- Seccion Testimonios-->
     <div class="container">
         <h2>Testimonios</h2>
-        <div class="testimonial">
+        <div class="testimonial"> <!-- Esta clase recibe formato de color de fondo, borde, margen-->
             <p>"¡Increíble servicio! ¡Gracias por hacer mi vida más fácil!"</p>
             <cite>- Cliente feliz</cite>
         </div>
@@ -48,19 +48,19 @@
     </div>
 </section>
 
-<section id="contact">
+<section id="contact"> <!-- Seccion Contacto y formulario-->
     <div class="container">
         <h2>Contacto</h2>
-        <form action="#" method="post">
-            <input type="text" name="name" placeholder="Nombre" required>
-            <input type="email" name="email" placeholder="Correo electrónico" required>
-            <textarea name="message" placeholder="Mensaje" required></textarea>
+        <form action="#" method="post"> <!-- Formulario de contacto-->
+            <input type="text" name="name" placeholder="Nombre" required> <!-- Campo para recibir un nombre-->
+            <input type="email" name="email" placeholder="Correo electrónico" required><!-- Campo para recibir un collero-->
+            <textarea name="message" placeholder="Mensaje" required></textarea><!-- Campo para recibir un mensaje-->
             <button type="submit" class="btn">Enviar mensaje</button>
         </form>
     </div>
 </section>
 
-<footer>
+<footer><!-- Pie de pagina-->
     <div class="container">
         <p>&copy; 2025 Compañía XYZ. Todos los derechos reservados.</p>
     </div>
