--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         <form action="#" method="post"> <!-- Formulario de contacto-->
             <input type="text" name="name" placeholder="Nombre" required> <!-- Campo para recibir un nombre-->
             <input type="email" name="email" placeholder="Correo electrónico" required><!-- Campo para recibir un collero-->
-            <textarea name="message" placeholder="Mensaje" required></textarea><!-- Campo para recibir un mensaje-->
+            <textarea name="message" placeholder="Mensaje" required></textarea><!-- Campo para escribir un texto-->
             <button type="submit" class="btn">Enviar mensaje</button>
         </form>
     </div>
 </section>
 
-<footer><!-- Pie de pagina-->
+<footer><!-- Pie de pagina, recibe color de fondo, texto centrado-->
     <div class="container">
         <p>&copy; 2025 Compañía XYZ. Todos los derechos reservados.</p>
     </div>
